tests/baselines/reference/enumInitializers_const_circular.errors.txt
tests/cases/compiler/enumInitializers_const_circular.ts(3,9): error TS2474: In 'const' enum declarations member initializer must be constant expression.


==== tests/cases/compiler/enumInitializers_const_circular.ts (1 errors) ====
    const x = E.y;
    const enum E {
        y = x,
            ~
!!! error TS2474: In 'const' enum declarations member initializer must be constant expression.
    }
    